[project]
name = "prosuite_anabolicarius"
version = "0.1.0"
description = "Anabolicarius is a tool to manage databases for the Prosuite."
authors = [
    {name = "Linus Rüegg",email = "l.rueegg@dirageosystems.ch"},
    {name = "Patrick Luchsinger",email = "p.luchsinger@dirageosystems.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
anabolicarius = "anabolicarius.main:main"
